# ti-rank

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  README.md  ScoreTracker.cpp  ScoreTracker.h  amalgamate.py  asset-manifest.json  config-overrides.js  index.html  main.cpp  package-lock.json  package.json
src/: App.css  App.js  CMakeLists.txt  firebaseScripts.js  main.cpp
src/components/: PlayerDetails.css  PlayerDetails.js  Sidebar.css  Sidebar.js
src/cpp/: CMakeLists.txt
src/js/: Player.js  firebaseConfig.js  firebaseScripts.js  firebase_db.js  getRankColor.js
src/pages/: GamesPage.css  GamesPage.js  PlayerDetails.css  PlayerDetails.js  SelectGroup.js
static/css/: main.c23dac8e.css  main.c23dac8e.css.map
static/js/: 453.8db96a84.chunk.js  453.8db96a84.chunk.js.map  main.25121442.js  main.25121442.js.map
